// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`e2e tests [snapshot] empty strip prefix 1`] = `
"----------------------------------------------------
modules/no-prefix/1.0.0/MODULE.bazel
----------------------------------------------------
module(
    name = "no-prefix",
    version = "1.0.0",
)

----------------------------------------------------
modules/no-prefix/1.0.0/presubmit.yml
----------------------------------------------------
bcr_test_module:
  module_path: "e2e/bzlmod"
  matrix:
    platform: ["debian10", "macos", "ubuntu2004", "windows"]
    bazel: [6.x, 7.x]
  tasks:
    run_tests:
      name: "Run test module"
      platform: \${{ platform }}
      bazel: \${{ bazel }}
      test_targets:
        - "//..."

----------------------------------------------------
modules/no-prefix/1.0.0/source.json
----------------------------------------------------
{
    "integrity": "sha256-bJ2Xfwra9b+xS7zKSEpP0ammXllsZPkJNgwRT59E6to=",
    "url": "https://github.com/testorg/no-prefix/archive/refs/tags/v1.0.0.tar.gz"
}

----------------------------------------------------
modules/no-prefix/metadata.json
----------------------------------------------------
{
    "homepage": "https://github.com/testorg/no-prefix",
    "maintainers": [
        {
            "name": "Foo McBar",
            "email": "foo@test.org",
            "github": "foobar"
        }
    ],
    "repository": [
        "github:testorg/no-prefix"
    ],
    "versions": [
        "1.0.0"
    ],
    "yanked_versions": {}
}

"
`;

exports[`e2e tests [snapshot] error email for incorrect strip prefix 1`] = `
"TO: releaser@test.org, foo@test.org
SUBJECT: Publish to BCR

Failed to publish entry for testorg/versioned@v1.0.0 to the Bazel Central Registry.

Could not find MODULE.bazel in release archive at ./versioned-1.0.0/MODULE.bazel.
Is the strip prefix in source.template.json correct? (currently it's 'versioned-1.0.0')


"
`;

exports[`e2e tests [snapshot] error email for incorrect strip prefix in multi module repo 1`] = `
"TO: releaser@test.org, foo@test.org, moo@test.org
SUBJECT: Publish to BCR

Failed to publish entry for testorg/multi-module@v1.0.0 to the Bazel Central Registry.

Failed to download release archive from http://localhost:8001/testorg/multi-module/releases/download/v1.0.0.tar.gz. Received status 503


"
`;

exports[`e2e tests [snapshot] missing strip prefix 1`] = `
"----------------------------------------------------
modules/empty-prefix/1.0.0/MODULE.bazel
----------------------------------------------------
module(
    name = "empty-prefix",
    version = "1.0.0",
)

----------------------------------------------------
modules/empty-prefix/1.0.0/presubmit.yml
----------------------------------------------------
bcr_test_module:
  module_path: "e2e/bzlmod"
  matrix:
    platform: ["debian10", "macos", "ubuntu2004", "windows"]
    bazel: [6.x, 7.x]
  tasks:
    run_tests:
      name: "Run test module"
      platform: \${{ platform }}
      bazel: \${{ bazel }}
      test_targets:
        - "//..."

----------------------------------------------------
modules/empty-prefix/1.0.0/source.json
----------------------------------------------------
{
    "integrity": "sha256-5TYQ+giuNTh5YplxFIAEcr2X96ht90LJpehveS4++G0=",
    "strip_prefix": "",
    "url": "https://github.com/testorg/empty-prefix/archive/refs/tags/v1.0.0.tar.gz"
}

----------------------------------------------------
modules/empty-prefix/metadata.json
----------------------------------------------------
{
    "homepage": "https://github.com/testorg/empty-prefix",
    "maintainers": [
        {
            "name": "Foo McBar",
            "email": "foo@test.org",
            "github": "foobar"
        }
    ],
    "repository": [
        "github:testorg/empty-prefix"
    ],
    "versions": [
        "1.0.0"
    ],
    "yanked_versions": {}
}

"
`;

exports[`e2e tests [snapshot] multiple modules 1`] = `
"----------------------------------------------------
modules/module/1.0.0/MODULE.bazel
----------------------------------------------------
module(
    name = "module",
    version = "1.0.0",
)

----------------------------------------------------
modules/module/1.0.0/presubmit.yml
----------------------------------------------------
bcr_test_module:
  module_path: "e2e/bzlmod"
  matrix:
    platform: ["debian10", "macos", "ubuntu2004", "windows"]
    bazel: [6.x, 7.x]
  tasks:
    run_tests:
      name: "Run test module"
      platform: \${{ platform }}
      bazel: \${{ bazel }}
      test_targets:
        - "//..."

----------------------------------------------------
modules/module/1.0.0/source.json
----------------------------------------------------
{
    "integrity": "sha256-TNq18BsxVczY1FA2lJkWLBXMhQAkYloc8qAZcjPH+40=",
    "strip_prefix": "multi-module-1.0.0",
    "url": "https://github.com/testorg/multi-module/releases/download/v1.0.0.tar.gz"
}

----------------------------------------------------
modules/module/metadata.json
----------------------------------------------------
{
    "homepage": "https://github.com/testorg/multi-module",
    "maintainers": [
        {
            "name": "Foo McBar",
            "email": "foo@test.org",
            "github": "foobar"
        }
    ],
    "repository": [
        "github:testorg/multi-module"
    ],
    "versions": [
        "1.0.0"
    ],
    "yanked_versions": {}
}

----------------------------------------------------
modules/submodule/1.0.0/MODULE.bazel
----------------------------------------------------
module(
    name = "submodule",
    version = "1.0.0",
)

----------------------------------------------------
modules/submodule/1.0.0/presubmit.yml
----------------------------------------------------
bcr_test_module:
  module_path: "e2e/bzlmod"
  matrix:
    platform: ["debian10", "macos", "ubuntu2004", "windows"]
    bazel: [6.x, 7.x]
  tasks:
    run_tests:
      name: "Run test module"
      platform: \${{ platform }}
      bazel: \${{ bazel }}
      test_targets:
        - "//..."

----------------------------------------------------
modules/submodule/1.0.0/source.json
----------------------------------------------------
{
    "integrity": "sha256-TNq18BsxVczY1FA2lJkWLBXMhQAkYloc8qAZcjPH+40=",
    "strip_prefix": "multi-module-1.0.0/submodule",
    "url": "https://github.com/testorg/multi-module/releases/download/v1.0.0.tar.gz"
}

----------------------------------------------------
modules/submodule/metadata.json
----------------------------------------------------
{
    "homepage": "https://github.com/testorg/multi-module",
    "maintainers": [
        {
            "name": "Foo McBar",
            "email": "foo@test.org",
            "github": "foobar"
        },
        {
            "name": "Moo Cow",
            "email": "moo@test.org",
            "github": "moocow"
        }
    ],
    "repository": [
        "github:testorg/multi-module"
    ],
    "versions": [
        "1.0.0"
    ],
    "yanked_versions": {}
}

"
`;

exports[`e2e tests [snapshot] ruleset with tarball release archive 1`] = `
"----------------------------------------------------
modules/tarball/1.0.0/MODULE.bazel
----------------------------------------------------
module(
    name = "tarball",
    version = "1.0.0",
)

----------------------------------------------------
modules/tarball/1.0.0/presubmit.yml
----------------------------------------------------
bcr_test_module:
  module_path: "e2e/bzlmod"
  matrix:
    platform: ["debian10", "macos", "ubuntu2004", "windows"]
    bazel: [6.x, 7.x]
  tasks:
    run_tests:
      name: "Run test module"
      platform: \${{ platform }}
      bazel: \${{ bazel }}
      test_targets:
        - "//..."

----------------------------------------------------
modules/tarball/1.0.0/source.json
----------------------------------------------------
{
    "integrity": "sha256-YFE/8KavtapcwFusSXdOrUk8aXATwtdEgZgDEgiZZ/U=",
    "strip_prefix": "tarball-1.0.0",
    "url": "https://github.com/testorg/tarball/archive/refs/tags/v1.0.0.tar.gz"
}

----------------------------------------------------
modules/tarball/metadata.json
----------------------------------------------------
{
    "homepage": "https://github.com/testorg/tarball",
    "maintainers": [
        {
            "name": "Foo McBar",
            "email": "foo@test.org",
            "github": "foobar"
        }
    ],
    "repository": [
        "github:testorg/tarball"
    ],
    "versions": [
        "1.0.0"
    ],
    "yanked_versions": {}
}

"
`;

exports[`e2e tests [snapshot] ruleset with unversioned module in source 1`] = `
"----------------------------------------------------
modules/unversioned/1.0.0/MODULE.bazel
----------------------------------------------------
module(
    name = "unversioned",
    version = "1.0.0",
)

----------------------------------------------------
modules/unversioned/1.0.0/patches/module_dot_bazel_version.patch
----------------------------------------------------
===================================================================
--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -1,3 +1,4 @@
 module(
     name = "unversioned",
+    version = "1.0.0",
 )

----------------------------------------------------
modules/unversioned/1.0.0/presubmit.yml
----------------------------------------------------
bcr_test_module:
  module_path: "e2e/bzlmod"
  matrix:
    platform: ["debian10", "macos", "ubuntu2004", "windows"]
    bazel: [6.x, 7.x]
  tasks:
    run_tests:
      name: "Run test module"
      platform: \${{ platform }}
      bazel: \${{ bazel }}
      test_targets:
        - "//..."

----------------------------------------------------
modules/unversioned/1.0.0/source.json
----------------------------------------------------
{
    "integrity": "sha256-Q0ySwS1iZvzII/KXwZoxaWE2lLpp6ZrS7uMd4xLVdg4=",
    "strip_prefix": "unversioned-1.0.0",
    "url": "https://github.com/testorg/unversioned/archive/refs/tags/v1.0.0.tar.gz",
    "patches": {
        "module_dot_bazel_version.patch": "sha256-6+XCBXtNxFGKuL182vqWxZkECRxHLHSe1gd+hfpnL8A="
    },
    "patch_strip": 1
}

----------------------------------------------------
modules/unversioned/metadata.json
----------------------------------------------------
{
    "homepage": "https://github.com/testorg/unversioned",
    "maintainers": [
        {
            "name": "Foo McBar",
            "email": "foo@test.org",
            "github": "foobar"
        }
    ],
    "repository": [
        "github:testorg/unversioned"
    ],
    "versions": [
        "1.0.0"
    ],
    "yanked_versions": {}
}

"
`;

exports[`e2e tests [snapshot] ruleset with versioned module in source 1`] = `
"----------------------------------------------------
modules/versioned/1.0.0/MODULE.bazel
----------------------------------------------------
module(
    name = "versioned",
    version = "1.0.0",
)

----------------------------------------------------
modules/versioned/1.0.0/presubmit.yml
----------------------------------------------------
bcr_test_module:
  module_path: "e2e/bzlmod"
  matrix:
    platform: ["debian10", "macos", "ubuntu2004", "windows"]
    bazel: [6.x, 7.x]
  tasks:
    run_tests:
      name: "Run test module"
      platform: \${{ platform }}
      bazel: \${{ bazel }}
      test_targets:
        - "//..."

----------------------------------------------------
modules/versioned/1.0.0/source.json
----------------------------------------------------
{
    "integrity": "sha256-iVWytRu1iuiPYMIOTOSooeY0dESDK71QNkGQPFbxzeM=",
    "strip_prefix": "versioned-1.0.0",
    "url": "https://github.com/testorg/versioned/archive/refs/tags/v1.0.0.tar.gz"
}

----------------------------------------------------
modules/versioned/metadata.json
----------------------------------------------------
{
    "homepage": "https://github.com/testorg/versioned",
    "maintainers": [
        {
            "name": "Foo McBar",
            "email": "foo@test.org",
            "github": "foobar"
        }
    ],
    "repository": [
        "github:testorg/versioned"
    ],
    "versions": [
        "1.0.0"
    ],
    "yanked_versions": {}
}

"
`;

exports[`e2e tests [snapshot] ruleset with zero-versioned module in source 1`] = `
"----------------------------------------------------
modules/zero-versioned/1.0.0/MODULE.bazel
----------------------------------------------------
module(
    name = "zero-versioned",
    version = "1.0.0",
)

----------------------------------------------------
modules/zero-versioned/1.0.0/patches/module_dot_bazel_version.patch
----------------------------------------------------
===================================================================
--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -1,4 +1,4 @@
 module(
     name = "zero-versioned",
-    version = "0.0.0",
+    version = "1.0.0",
 )

----------------------------------------------------
modules/zero-versioned/1.0.0/presubmit.yml
----------------------------------------------------
bcr_test_module:
  module_path: "e2e/bzlmod"
  matrix:
    platform: ["debian10", "macos", "ubuntu2004", "windows"]
    bazel: [6.x, 7.x]
  tasks:
    run_tests:
      name: "Run test module"
      platform: \${{ platform }}
      bazel: \${{ bazel }}
      test_targets:
        - "//..."

----------------------------------------------------
modules/zero-versioned/1.0.0/source.json
----------------------------------------------------
{
    "integrity": "sha256-OHSXEuWyo2djYr8CjWMT9dq38TDS9P/vIzNBfLQ5E+Q=",
    "strip_prefix": "zero-versioned-1.0.0",
    "url": "https://github.com/testorg/zero-versioned/archive/refs/tags/v1.0.0.tar.gz",
    "patches": {
        "module_dot_bazel_version.patch": "sha256-KpbuC1vv5mfhdTs5nnTl3/pH7Y/6JCnD1b1XLsqyOAo="
    },
    "patch_strip": 1
}

----------------------------------------------------
modules/zero-versioned/metadata.json
----------------------------------------------------
{
    "homepage": "https://github.com/testorg/zero-versioned",
    "maintainers": [
        {
            "name": "Foo McBar",
            "email": "foo@test.org",
            "github": "foobar"
        }
    ],
    "repository": [
        "github:testorg/zero-versioned"
    ],
    "versions": [
        "1.0.0"
    ],
    "yanked_versions": {}
}

"
`;

exports[`e2e tests [snapshot] ruleset with zip release archive 1`] = `
"----------------------------------------------------
modules/zip/1.0.0/MODULE.bazel
----------------------------------------------------
module(
    name = "zip",
    version = "1.0.0",
)

----------------------------------------------------
modules/zip/1.0.0/presubmit.yml
----------------------------------------------------
bcr_test_module:
  module_path: "e2e/bzlmod"
  matrix:
    platform: ["debian10", "macos", "ubuntu2004", "windows"]
    bazel: [6.x, 7.x]
  tasks:
    run_tests:
      name: "Run test module"
      platform: \${{ platform }}
      bazel: \${{ bazel }}
      test_targets:
        - "//..."

----------------------------------------------------
modules/zip/1.0.0/source.json
----------------------------------------------------
{
    "integrity": "sha256-Ko4V5xPneq+Bq8C4EKMXUCnbzjrTTUaFLwC4ckVz3go=",
    "strip_prefix": "zip-1.0.0",
    "url": "https://github.com/testorg/zip/archive/refs/tags/v1.0.0.zip"
}

----------------------------------------------------
modules/zip/metadata.json
----------------------------------------------------
{
    "homepage": "https://github.com/testorg/zip",
    "maintainers": [
        {
            "name": "Foo McBar",
            "email": "foo@test.org",
            "github": "foobar"
        }
    ],
    "repository": [
        "github:testorg/zip"
    ],
    "versions": [
        "1.0.0"
    ],
    "yanked_versions": {}
}

"
`;
